fixed alignment of elements

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,17 @@
 body{ 
     background-color: grey;
     width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
 }
 
 .main{
     width: 100%;
+    height: max-content;
     margin: 0;
     padding: 0;
     display: flex;
@@ -61,16 +64,27 @@ td{
 }
 
 .image-display{
-    height: 100%;
+    box-sizing: border-box;
+    flex-grow: 1;
     width: 100%;
     padding: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space around;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.image-holder{
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 img{
-    margin: auto;
+    border-radius: 50px;
+    max-height: 100%;
+    max-width: 100%;
 }
 
 #prev, #next{
